// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarCopyright renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    "All rights reserved.",
  ],
  "props": {
    "className": undefined,
  },
  "type": "div",
}
`;

exports[`SidebarCopyright renders correctly with empty string 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": null,
  "props": {
    "className": undefined,
  },
  "type": "div",
}
`;
